# MacBot

./: .env.example  .gitattributes  .gitignore  .gitmodules  Dockerfile  ENHANCED_FEATURES.md  MACBOT_IMPROVEMENT_PLAN.md  MANIFEST.in  Makefile  README.md  STARTUP_FIXED.md  audio_interrupt.py  basic_functionality_test.py  code_counter.py  config.yaml  docker-compose.yml  gettysburg_test.py  message_bus.py  message_bus_client.py  orchestrator.py  pyproject.toml  rag_server.py  requirements-dev.txt  requirements.txt  runtime.txt  setup.py  start.sh  start_all.py  start_macbot.sh  start_macbot_fixed.sh  stt_test.py  stt_test_result.txt  test_basic.py  test_interruptible_conversation.py  test_message_bus.py  test_tts_simple.py  tts_integration_test.py  tts_quality_comparison.py  tts_test.py  voice_assistant.py  (+1 more)
.github/workflows/: ci.yml
config/: config.yaml
data/rag_data/chroma_db/: chroma.sqlite3
data/rag_database/: chroma.sqlite3
docs/: API_REFERENCE.md  CONFIGURATION.md  DEVELOPMENT.md  ENHANCED_FEATURES.md  MACBOT_IMPROVEMENT_PLAN.md  TROUBLESHOOTING.md  TTS_OPTIMIZATION_GUIDE.md
rag_data/: documents.json
rag_database/: chroma.sqlite3
scripts/: benchmark_transcription.py  bootstrap_mac.sh  quantize_tts_model.py  start_macbot.sh  verify_setup.py
src/macbot/: __init__.py  audio_interrupt.py  auth.py  cli.py  config.py  conversation_manager.py  error_handler.py  flask_app.py  health_monitor.py  logging_utils.py  message_bus.py  message_bus_client.py  message_bus_server.py  orchestrator.py  rag_server.py  resource_manager.py  tools.py  utils.py  validation.py  voice_assistant.py  web_dashboard.py
src/macbot/static/: dashboard.js
src/macbot/templates/: dashboard.html  rag_dashboard.html
tests/: conftest.py  test_auth.py  test_barge_in.py  test_config_bool_parsing.py  test_config_validation.py  test_conversation_context.py  test_conversation_manager_rlock.py  test_interruptible_conversation.py  test_message_bus.py  test_message_bus_dispatch.py  test_message_bus_last_seen.py  test_orchestrator_message_bus.py  test_orchestrator_process_output.py  test_rag_server_api.py  test_rag_server_dashboard.py  test_rag_server_model_loading.py  test_state_callback.py  test_tool_calling.py  test_tools.py  test_tts_streaming.py  test_tts_workers.py  test_voice_assistant_tools.py  test_voice_assistant_transcription.py  test_web_dashboard.py
